--- a/MailLogCount.xcodeproj/xcshareddata/xcschemes/MailLogCount.xcscheme
+++ b/MailLogCount.xcodeproj/xcshareddata/xcschemes/MailLogCount.xcscheme
@@ -62,6 +62,16 @@
             ReferencedContainer = "container:MailLogCount.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--file /Users/dennis/Projects/MailLogCount/test.log "
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "unknown"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
