--- a/MailLogCount.xcodeproj/xcshareddata/xcschemes/MailLogCount.xcscheme
+++ b/MailLogCount.xcodeproj/xcshareddata/xcschemes/MailLogCount.xcscheme
@@ -46,7 +46,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      launchStyle = "0"
+      launchStyle = "1"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
@@ -73,6 +73,14 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "--file /Users/dennis/Projects/MailLogCount/test.log "
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--min 10"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--email dennis@schafroth.dk"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
